Sirius Panda - pilot version

--- a/src/settings/settings.json
+++ b/src/settings/settings.json
@@ -1,4 +1,4 @@
 {
-	"title": "Cassidy's blog template",
-	"subtitle": "A blog template for you!"
+	"title": "Sirius Panda",
+	"subtitle": "A random tech blog!"
 }
